updates phase 1
